--- a/ex1_slideshow_nguyenhoanghai/package.json
+++ b/ex1_slideshow_nguyenhoanghai/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-new-app",
+  "name": "ex1_slideshow_nguyenhoanghai",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
